I added the flashing button, a second image, an accordian that uses HTML, LESS(CSS), and JavaScript. I customized the colors for the according and the background to make sure that the color of the image and the background color of the accordian div is the same. I will create the basic style for the fake student feedback and then complete the footer for the home page sunday and monday. I will then be able to finish the about page basic styling monday evening and likely have a MVP done on tuesday so I can really go through and add JavaScript events and components/classes to make the about page and the student commments section really work. A stretch goal I want to do is to have a carousel of student comments that is set to automatically rotate every couple of seconds to make the home page pop

--- a/LESS/bgs.less
+++ b/LESS/bgs.less
@@ -7,3 +7,12 @@
   background-color: #002070;;
 
 }
+.bg2{
+  height: 39.5rem;
+  background-image: url('/images/accordion-left.svg');
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  background-position: center;
+  background-color: #002070;;
+
+}
