--- a/LESS/cta.less
+++ b/LESS/cta.less
@@ -5,4 +5,14 @@
   line-height: 12rem;
   color: #bb1333;
   font-weight: bold;
+  h1, h2 {
+    text-shadow: .1rem .1rem .5rem #002070;
   }
+  button{
+    border-radius: 10rem;
+    height: 4rem;
+    width: 19rem;
+    .flashingBtn();
+    font-weight: bolder;
+  }
+}
