--- a/LESS/mixins.less
+++ b/LESS/mixins.less
@@ -1,4 +1,4 @@
-.flex(@a: center; @b: center; @c: center; @d: wrap; @e: row; @f:flex; @g:100%; ){
+.flex(@a: center; @b: center; @c: center; @d: wrap; @e: row; @f:flex;){
 
   justify-content: @a;
   align-content: @b;
@@ -6,7 +6,6 @@
   flex-wrap: @d;
   flex-direction: @e;
   display: @f;
-  width: @g;
 }
 
 .fixed{
@@ -37,4 +36,28 @@
       .flex(@e: column;)
 
   }
+}
+
+.flashingBtn(@a: btn; @b: 6s; ){
+  background:#bb1333;
+	color:#fff;
+	border:none;
+
+	
+	animation-name: @a;
+	animation-duration: @b;
+	animation-timing-function: linear;
+	animation-iteration-count: infinite;
+
+	//Firefox 1+
+	-webkit-animation-name: @a;
+	-webkit-animation-duration: @b;
+	-webkit-animation-timing-function: linear;
+	-webkit-animation-iteration-count: infinite;
+
+	//Safari 3-4
+	-moz-animation-name: @a;
+	-moz-animation-duration: @b;
+	-moz-animation-timing-function: linear;
+	-moz-animation-iteration-count: infinite;
 }
