--- a/LESS/nav-menu.less
+++ b/LESS/nav-menu.less
@@ -20,7 +20,7 @@
     height: 100%;
     li{
       list-style: none;
-      font-size: 2rem;
+      font-size: 3rem;
       font-weight: bold;
       a{
         text-decoration: none;
